// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link Action with child element 1`] = `
<p
<<<<<<< HEAD
  className="sc-bxivhb kFVWeI"
=======
  className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
>
  <button
    className="sc-jWBwVP ieZLxK"
    onClick={[Function]}
    title="Google search"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</p>
`;

exports[`Storyshots Link Default 1`] = `
<p
<<<<<<< HEAD
  className="sc-bxivhb kFVWeI"
=======
  className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
>
  <a
    className="sc-cvbbAY jqqzQW"
    href="http://www.google.com"
    target="_self"
    title="Google search"
  >
    Google search
  </a>
</p>
`;
